# kuiper

./: .gitignore  Cargo.toml  LICENSE
cli/: Cargo.toml  README.md
cli/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
requests/: example.env  headers  headers.json  interpolation.kuiper  request_in_root.kuiper
requests/subdir/: headers.json  request_in_subdir.kuiper
requests/todos/: get_item.kuiper
requests/users/: headers
