[package]
name = "kuiper"
description = "An easy-to-use HTTP integration testing tool"
version = "0.0.1"
edition = "2021"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
license = "MIT"
keywords = ["postman", "integration", "requests"]
categories = ["command-line-utilities", "development-tools::testing"]
repository = "https://github.com/ijagberg/kuiper"
homepage = "https://github.com/ijagberg/kuiper"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
kuiper-lib = { version = "0.0.1", path = "../lib" }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
