[package]
name = "libkuiper"
description = "Library code for the kuiper CLI"
version = "0.0.3"
edition = "2021"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
license = "MIT"
keywords = ["postman", "integration", "requests"]
categories = ["command-line-utilities", "development-tools::testing"]
repository = "https://github.com/ijagberg/kuiper"
homepage = "https://github.com/ijagberg/kuiper"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }
jiff = "0.1.13"

[dev-dependencies]
test-log = "0.2.16"
dotenv = "0.15.0"
